fix alignment of widgets in search gadget
svn commit r33464

--- a/www/styles/base.css
+++ b/www/styles/base.css
@@ -301,7 +301,11 @@ textarea {
 	display: inline;
 }
 
-.blorg-search-gadget .swat-button { vertical-align: baseline; }
+.blorg-search-gadget .swat-entry,
+.blorg-search-gadget .swat-button {
+	vertical-align: middle;
+	font-size: 85%;
+}
 
 /* }}} */
 /* }}} */
